fix new task visible when list is focused

--- a/imports/templates/list/list.scss
+++ b/imports/templates/list/list.scss
@@ -69,8 +69,8 @@
 		display: none;
 	}
 
-	&:hover .task.new,
-	.task.new.focus {
+	&.is-focused .task.new,
+	&:hover .task.new {
 		display: block;
 	}
 }
